Fix recursive build command in proxy package.json

--- a/qwen-proxy/package.json
+++ b/qwen-proxy/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "vercel dev",
-    "build": "vercel build",
+    "build": "echo 'Serverless functions ready'",
     "deploy": "vercel --prod"
   },
   "keywords": ["api", "proxy", "cors", "qwen", "vercel"],
