--- a/qwen-proxy/package.json
+++ b/qwen-proxy/package.json
@@ -1,18 +1,5 @@
 {
   "name": "qwen-api-proxy",
   "version": "1.0.0",
-  "description": "通义千问API代理服务器，解决CORS问题",
-  "main": "index.js",
-  "scripts": {
-    "dev": "vercel dev",
-    "build": "echo 'Serverless functions ready'",
-    "deploy": "vercel --prod"
-  },
-  "keywords": ["api", "proxy", "cors", "qwen", "vercel"],
-  "author": "Your Name",
-  "license": "MIT",
-  "dependencies": {},
-  "devDependencies": {
-    "vercel": "^32.0.0"
-  }
+  "description": "通义千问API代理服务器，解决CORS问题"
 }
