--- a/neurogen-exam-system/vercel.json
+++ b/neurogen-exam-system/vercel.json
@@ -1,5 +1,11 @@
 {
   "version": 2,
+  "builds": [
+    {
+      "src": "*.html",
+      "use": "@vercel/static"
+    }
+  ],
   "functions": {
     "api/questionbank.js": {
       "maxDuration": 30
@@ -7,5 +13,19 @@
     "api/apiconfig.js": {
       "maxDuration": 30
     }
-  }
+  },
+  "routes": [
+    {
+      "src": "/",
+      "dest": "/index.html"
+    },
+    {
+      "src": "/admin",
+      "dest": "/admin.html"
+    },
+    {
+      "src": "/exam",
+      "dest": "/exam.html"
+    }
+  ]
 }
